prevent styled file input from overflowing

--- a/public/less/pixeleditor.less
+++ b/public/less/pixeleditor.less
@@ -81,6 +81,7 @@ body {
   width: @toolbar-button-width;
   height: @toolbar-button-height;
   opacity: 0;
+  overflow: hidden;
 }
 
 
