--- a/public/less/pixeleditorcomponents/toolbar.less
+++ b/public/less/pixeleditorcomponents/toolbar.less
@@ -92,7 +92,7 @@ div.toolbar-button {
 
 @media (max-height: @toolbar-min-height) {
   .toolbar-bottom-attached {
-    position: static;
+    position: relative;
     padding-bottom: 0px;
   }
 }
